--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,7 @@
 		}
 	},
 	"builds": [
-		{ "src": "home/package.json", "use": "@vercel/next" },
+		{ "src": "/package.json", "use": "@vercel/next" },
 		{ "src": "blog/package.json", "use": "@vercel/next" }
 	],
 	"routes": [
