--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,8 @@
 	},
 	"builds": [
 		{ "src": "/package.json", "use": "@vercel/next" },
-		{ "src": "blog/package.json", "use": "@vercel/next" }
+		{ "src": "blog/package.json", "use": "@vercel/next" },
+		{ "src": "blog/:path*/package.json", "use": "@vercel/next" }
 	],
 	"routes": [
 		{ "src": "/:path*", "dest": "/:path*" },
